# miscelaneos

./: README.md
bash-completion/: 00-simple-autocomplete.sh  01-function-autocomplete.sh  02-some-app-autocomplete.sh  Makefile  README.md  bar.sh  foo.lst  main.c
deb-package/: CMakeLists.txt  README.md
deb-package/include/: Client.h
deb-package/package/: Dockerfile  build-deb.sh
deb-package/package/DEBIAN/: control
deb-package/package/assets/: test-client.desktop
deb-package/src/: Client.cpp  main.cpp
deb-package/ui/: Client.ui
profiling/: README.md
profiling/v01/: CMakeLists.txt  Game.cpp  Game.h
profiling/v02/: Game.cpp  Game.h  main.cpp
